--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
   },
   "dependencies": {
     "coins": "github:okwme/coins",
+    "crypto-js": "^3.1.9-1",
     "lotion": "^0.1.18",
     "shea": "0.0.13",
     "vue": "^2.5.13",
     "vue-router": "^3.0.1",
-    "vuex": "^3.0.1"
+    "vuex": "^3.0.1",
+    "vuex-persistedstate": "^2.5.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.0.0-beta.6",
@@ -32,6 +34,7 @@
     "chai": "^4.1.2",
     "concurrently": "^3.5.1",
     "node-sass": "^4.7.2",
+    "pug": "^2.0.3",
     "sass-loader": "^6.0.6",
     "vue-template-compiler": "^2.5.13"
   },
