--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "app": "node app.js",
     "concurrently": "concurrently --kill-others \"npm run app\" \"vnpm run serve\"",
     "serve": "vue-cli-service serve --open",
-    "build": "vue-cli-service build",
+    "build": "vue-cli-service build && cp _redirects dist",
     "test": "vue-cli-service test",
     "e2e": "vue-cli-service e2e",
     "lint": "vue-cli-service lint",
