--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "concurrently": "concurrently --kill-others \"npm run app\" \"vnpm run serve\"",
     "serve": "vue-cli-service serve --open",
     "build": "vue-cli-service build && cp _redirects dist",
-    "test": "vue-cli-service test",
-    "e2e": "vue-cli-service e2e",
+    "unit": "vue-cli-service test",
+    "test": "vue-cli-service e2e",
     "lint": "vue-cli-service lint",
     "e2e:open": "vue-cli-service e2e:open"
   },
